--- a/popup.html
+++ b/popup.html
@@ -120,6 +120,7 @@
           <div class="logs-toolbar">
             <button type="button" id="refreshLogsBtn" class="btn btn-secondary btn-small">Refresh</button>
             <button type="button" id="copyLogsBtn" class="btn btn-secondary btn-small">Copy logs</button>
+            <button type="button" id="copyLastErrorBtn" class="btn btn-secondary btn-small">Copy last error</button>
           </div>
           <pre id="logsOutput" class="logs-output"></pre>
           <small class="logs-hint">For full console: chrome://extensions → SnapSite → Inspect service worker</small>
